hack/dev/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-tunnel-ingress-controller-dev
